# back/src/contexts/book/infrastructure/i-book-repository.ts
@@ -1,7 +1,8 @@
-import { Book } from "../types";
+import { Book } from "../domains/types";
 
 export type BookRaw = Book;
 
 export interface IBookRepository {
     getAllBooks(): Promise<BookRaw[]>;
+    createBook(book: Book): Promise<Book>;
 }
